--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Pursuing Masters' in Computer Science at North Carolina State University. 
-
+                        Pursuing Masters' in Computer Science at North Carolina State University.
+                    </p> 
+                    <p>
                         I have varied interests ranging from Networking Technologies to Software Development, but I'm especially enthusiastic about Artificial Intelligence/Machine Learning development and applications. I believe in building technology that empowers mankind leading to a smarter and better future.
-
+                    </p>
+                    <p>
                         I'm a self motivated software engineer with an inquisitive mind. I like to lead with example and seek challenges that push me beyond my limits, helping me evolve as an Engineer as well as a human being.
-
+                    </p>
+                    <p>
                         Apart from Technology, my passion dwells in Photography, Writing and Traveling. I love to interact with people from various cultures, of different countries and sharing experiences as I believe there's something to learn from every experience.
-
+                    </p>
+                    <p>
                         Looking for challenging and rewarding roles in the computer software industry.
                     </p>
                     <div class="row">
@@ -186,32 +190,15 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
             <li>Ruby on Rails</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Node.js</li>
+            <li>Node.js</li>
+            <li>Node.js</li>
+            <li>Node.js</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -235,7 +222,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2018 Aayush Patial
                     </p>
                 </div>
                 <div class="col-sm-2 top">
