--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
        
-        <div class="row skillPanel">
+        <div class="skill row">
             <div class="col-md-3 skillTitle title-style">
                 Web Technology
             </div>
@@ -150,7 +150,7 @@
                 </ul>
             </div>
         </div>
-         <div class="row skillPanel">
+         <div class="skill row">
             <div class="col-md-3 skillTitle title-style">
                 Databases
             </div>
@@ -164,7 +164,7 @@
                 </ul>
             </div>
         </div>
-        <div class="row skillPanel">
+        <div class="skill row">
             <div class="col-md-3 skillTitle title-style">
                 Tools
             </div>
