--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
      <div id="skills">
         <h2 class="heading">Skills</h2>
-        <div class="skill row">
-            <div class="col-md-3 skillTitle title-style">
+        <div class="row skillRow">
+            <div class="col-md-3 skillTitle">
                 Programming
             </div>
             <div class="col-md-9 skillTiles">
@@ -137,8 +137,8 @@
             </div>
         </div>
        
-        <div class="skill row">
-            <div class="col-md-3 skillTitle title-style">
+        <div class="row skillRow">
+            <div class="col-md-3 skillTitle ">
                 Web Technology
             </div>
             <div class="col-md-9 skillTiles">
@@ -150,8 +150,8 @@
                 </ul>
             </div>
         </div>
-         <div class="skill row">
-            <div class="col-md-3 skillTitle title-style">
+         <div class="row skillRow">
+            <div class="col-md-3 skillTitle ">
                 Databases
             </div>
             <div class="col-md-9 skillTiles">
@@ -164,8 +164,8 @@
                 </ul>
             </div>
         </div>
-        <div class="skill row">
-            <div class="col-md-3 skillTitle title-style">
+        <div class="row skillRow">
+            <div class="col-md-3 skillTitle ">
                 Tools
             </div>
             <div class="col-md-9 skillTiles">
