--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
     <!-- End #about -->
 
-     <div id="skills">
+     <div id="skills" class="background-alt>
         <h2 class="heading">Skills</h2>
         <div class="row skillRow">
             <div class="col-md-3 skillTitle">
