--- a/index.html
+++ b/index.html
@@ -217,48 +217,89 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
-    
 
-    <div id="projects" class="background-alt">
+<div id="experience" class="background-alt">
         <h2 class="heading">Projects</h2>
-        <div class="container">
-            <div class="row">
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
-
-                <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
-                    <div class="project-info">
-                        <h3>Project Name Here</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
-                        <a href="#">View Project</a>
-                    </div>
-                    <!-- End .project-info -->
-                </div>
-                <!-- End .project -->
+        <div id="experience-timeline">
+            <div data-date="September 2015 – September 2016">
+                <h3>Multi-Label Classification of Satellite Images using CNN</h3>
+                <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <h4>Python, CNN, Keras</h4>
+                <p>
+                    • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc
+                    • Model takes an input image, computes a score for each of the 17 features, and then uses a cutoff threshold to decide which labels to keep.
+                </p>
             </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Wolf Inns Hotel Management System</h3>
+                <h4>SQL, MariaDB, JDBC and Java</h4>
+                <p>
+                    • Coded the Wolf Inns Hotel DBMS application with the user ability to book different category rooms in multiple hotels, check nightly rates of each room along with allowed guests and complimentary services.
+                    • DB admins can access the hotel employee information, and customer details as well as make modifications                
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Multi-Class Geospatial Object Detection </h3>
+                <h4>Tech used: Python, Scikit, OpenCV, SVM</h4>
+                <p>
+                    • Designing a framework to detect specific objects from a geographical image by creating HOG of individual object images which are to be detected
+                    • Using linear SVM for classifying and detection of objects in the image within certain range of orientation
+
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>OCR based Smart Shopping List  </h3>
+                <h4>Java, Node.js, MongoDB, Google Cloud Vision API</h4>
+                <p>
+                    • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the application with just a touch.
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Car Rental Web Application  </h3>
+                <h4>Ruby on Rails,HTML,CSS, Heroku and PGSQL</h4>
+                <p>
+                    • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations. 
+                    • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>NSF supported EXPERTIZA  </h3>
+                <h4>TDD,Ruby on Rails, MySQL,HTML, and RSpec</h4>
+                <p>
+                    • Expertiza is a classroom tool build on Ruby on Rails for group projects and peer review. We refactored assignment model of 'Expertiza' using Ruby On Rails and DRY principles for better architecture. 
+                    • Worked on UI issues and improvement of display of review page for students work.
+                    • Added Expert review status and addition of feature of multiple expert review. 
+                </p>
+            </div>
+
+             <div data-date="September 2015 – September 2016">
+                <h3>FIS based Autonomous Navigation System </h3>
+                <h4>MATLAB</h4>
+                <p>
+                    • Developed a Fuzzy Inference System(FIS) based algorithm for simulating the Autonomous Navigation System on MATLAB giving an error of about 1-2% from the ideal path.
+                    • Analysed the developed system against ANFIS and Neural-Networks to prove FIS as the better technique.
+                    • Research Paper published on IEEE explore digital library - DOI: 10.1109/ICCCNT.2017.8204164
+                </p>
+            </div>
+
+            <div data-date="September 2015 – September 2016">
+                <h3>Speech Emotion Detection </h3>
+                <h4>Job Title</h4>
+                <p>
+                   • Developed an audio input classifier using multiple single hidden layer neural-networks in 5 user defined classes. 
+                   • Analyzed extracted audio features using Principal Component Analysis(PCA) and used Neural-Network learns emotional information from low-level features giving 72% accuracy when tested.
+
+                </p>
+            </div>
+
         </div>
     </div>
-    <!-- End #projects -->
-
+    <!-- End #experience -->
 
 
     <div id="contact">
