--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <h4>Master of Computer Science, CGPA = 3.44</h4>
             <ul>
                 <li>
-                    Completed two semesters in the computer science department with a 3.44 GPA. 
+                    Completed two semesters in the computer science department at NCSU. 
                 </li>
                 <li>
                     Successfully undertook and finished coursework involving core topics of Algorithms, Database Mangement, Artifictial Intelligence, and Software Engineering
@@ -222,8 +222,7 @@
         <h2 class="heading">Projects</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Multi-Label Classification of Satellite Images using CNN</h3>
-                <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                <h3>Multi-Label Classification of Satellite Images using CNN<a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
                 <h4>Python, CNN, Keras</h4>
                 <p>
                     • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc
