--- a/index.html
+++ b/index.html
@@ -221,27 +221,35 @@
 <div id="experience" class="background-alt">
         <h2 class="heading">Projects</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Multi-Label Classification of Satellite Images using CNN  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h3>
-                <h4>Python, CNN, Keras</h4>
+            <div data-date="March 2018 – April 2018">
+                <h3>Multi-Label Classification of Satellite Images using CNN</h3>
+                <h4>Python, CNN, Keras  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
                     • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc
                     • Model takes an input image, computes a score for each of the 17 features, and then uses a cutoff threshold to decide which labels to keep.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="February 2018 – April 2018">
                 <h3>Wolf Inns Hotel Management System</h3>
-                <h4>SQL, MariaDB, JDBC and Java</h4>
+                <h4>SQL, MariaDB, JDBC and Java  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Coded the Wolf Inns Hotel DBMS application with the user ability to book different category rooms in multiple hotels, check nightly rates of each room along with allowed guests and complimentary services.
                     • DB admins can access the hotel employee information, and customer details as well as make modifications                
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="March 2018 – April 2018">
+                <h3>OCR based Smart Shopping List  </h3>
+                <h4>Java, Node.js, MongoDB, Google Cloud Vision API  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <p>
+                    • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the application with just a touch.
+                </p>
+            </div>
+
+            <div data-date="February 2018 – March 2018">
                 <h3>Multi-Class Geospatial Object Detection </h3>
-                <h4>Tech used: Python, Scikit, OpenCV, SVM</h4>
+                <h4>Python, Scikit, OpenCV, SVM   <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Designing a framework to detect specific objects from a geographical image by creating HOG of individual object images which are to be detected
                     • Using linear SVM for classifying and detection of objects in the image within certain range of orientation
@@ -249,26 +257,9 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>OCR based Smart Shopping List  </h3>
-                <h4>Java, Node.js, MongoDB, Google Cloud Vision API</h4>
-                <p>
-                    • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the application with just a touch.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Car Rental Web Application  </h3>
-                <h4>Ruby on Rails,HTML,CSS, Heroku and PGSQL</h4>
-                <p>
-                    • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations. 
-                    • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
+            <div data-date="November 2017 – December 2017">
                 <h3>NSF supported EXPERTIZA  </h3>
-                <h4>TDD,Ruby on Rails, MySQL,HTML, and RSpec</h4>
+                <h4>TDD,Ruby on Rails, MySQL,HTML, and RSpec  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Expertiza is a classroom tool build on Ruby on Rails for group projects and peer review. We refactored assignment model of 'Expertiza' using Ruby On Rails and DRY principles for better architecture. 
                     • Worked on UI issues and improvement of display of review page for students work.
@@ -276,9 +267,19 @@
                 </p>
             </div>
 
-             <div data-date="September 2015 – September 2016">
+            <div data-date="September 2017 – October 2017">
+                <h3>Car Rental Web Application  </h3>
+                <h4>Ruby on Rails,HTML,CSS, Heroku and PGSQL  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <p>
+                    • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations. 
+                    • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
+                </p>
+            </div>
+
+
+             <div data-date="January 2017 – May 2017">
                 <h3>FIS based Autonomous Navigation System </h3>
-                <h4>MATLAB</h4>
+                <h4>MATLAB  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Developed a Fuzzy Inference System(FIS) based algorithm for simulating the Autonomous Navigation System on MATLAB giving an error of about 1-2% from the ideal path.
                     • Analysed the developed system against ANFIS and Neural-Networks to prove FIS as the better technique.
@@ -286,9 +287,9 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="October 2016 – November 2016">
                 <h3>Speech Emotion Detection </h3>
-                <h4>Job Title</h4>
+                <h4>MATLAB  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                    • Developed an audio input classifier using multiple single hidden layer neural-networks in 5 user defined classes. 
                    • Analyzed extracted audio features using Principal Component Analysis(PCA) and used Neural-Network learns emotional information from low-level features giving 72% accuracy when tested.
