--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
-    <header>
+    <header class = "sticky">
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
@@ -34,7 +34,7 @@
                 <a href="#education">Education</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="#experience">Projects</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -232,7 +232,7 @@
 
             <div data-date="February 2018 – April 2018">
                 <h3>Wolf Inns Hotel Management System</h3>
-                <h4>SQL, MariaDB, JDBC and Java  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Java, SQL, MariaDB, JDBC   <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Coded the Wolf Inns Hotel DBMS application with the user ability to book different category rooms in multiple hotels, check nightly rates of each room along with allowed guests and complimentary services.
                     • DB admins can access the hotel employee information, and customer details as well as make modifications                
@@ -259,7 +259,7 @@
 
             <div data-date="November 2017 – December 2017">
                 <h3>NSF supported EXPERTIZA  </h3>
-                <h4>TDD,Ruby on Rails, MySQL,HTML, and RSpec  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Ruby on Rails, MySQL,HTML, RSpec  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Expertiza is a classroom tool build on Ruby on Rails for group projects and peer review. We refactored assignment model of 'Expertiza' using Ruby On Rails and DRY principles for better architecture. 
                     • Worked on UI issues and improvement of display of review page for students work.
@@ -269,7 +269,7 @@
 
             <div data-date="September 2017 – October 2017">
                 <h3>Car Rental Web Application  </h3>
-                <h4>Ruby on Rails,HTML,CSS, Heroku and PGSQL  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Ruby on Rails,HTML,CSS, Heroku, PGSQL  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations. 
                     • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
@@ -305,7 +305,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/apatial@ncsu.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
