--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
-            <li>
-                <a href="#about">About</a>
-            </li>
              <li>
                 <a href="#skills">Skills</a>
             </li>
@@ -45,9 +42,18 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Aayush Patial</h1>
+
+            <div id="DP" class="DP"></div>
+
+            <h1>Aayush</h1>
+            <h1>Patial</h1>
             <h2>Code and Chill</h2>
+
+
             <a href="#" class="btn-rounded-white">Download Resume</a>
+       
+
+
         </div>
         <!-- End #lead-content -->
 
@@ -122,6 +128,44 @@
     </div>
     <!-- End #about -->
 
+
+
+ <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>North Carolina State University</h3>
+            <span class="education-date">August 2017 - Present</span>
+            <h4>Master of Computer Science, CGPA = 3.44</h4>
+            <ul>
+                <li>
+                    Completed two semesters in the computer science department at NCSU. 
+                </li>
+                <li>
+                    Successfully undertook and finished coursework involving core topics of Algorithms, Database Mangement, Artifictial Intelligence, and Software Engineering
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>University of Mumbai</h3>
+            <span class="education-date">Jul 2013 - May 2017</span>
+            <h4>Bachelor of Science in Electronics Engineering, CGPA = 3.63</h4>
+            <ul>
+                <li>
+                    Successfully graduated with consistent perfomance throughtout the 4 years.
+                </li>
+                <li>
+                    Completed coursework involving topics of object oriented programming, system programming and network security.
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+
+
      <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <div class="row skillRow">
@@ -184,39 +228,7 @@
     </div>
     <!-- End #skills -->
 
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>North Carolina State University</h3>
-            <span class="education-date">August 2017 - Present</span>
-            <h4>Master of Computer Science, CGPA = 3.44</h4>
-            <ul>
-                <li>
-                    Completed two semesters in the computer science department at NCSU. 
-                </li>
-                <li>
-                    Successfully undertook and finished coursework involving core topics of Algorithms, Database Mangement, Artifictial Intelligence, and Software Engineering
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Mumbai</h3>
-            <span class="education-date">Jul 2013 - May 2017</span>
-            <h4>Bachelor of Science in Electronics Engineering, CGPA = 3.63</h4>
-            <ul>
-                <li>
-                    Successfully graduated with consistent perfomance throughtout the 4 years.
-                </li>
-                <li>
-                    Completed coursework involving topics of object oriented programming, system programming and network security.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
+   
 
 <div id="experience" class="background-alt">
         <h2 class="heading">Projects</h2>
