--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 
             <div id="DP" class="DP"></div>
 
-            <h1>Aayush</h1>
-            <h3>Patial</h3>
+            <h1>Aayush Patial</h1>
             <h2>Code and Chill</h2>
 
 
