--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
 
- <div id="education">
+ <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>North Carolina State University</h3>
@@ -165,7 +165,7 @@
 
 
 
-     <div id="skills" class="background-alt">
+     <div id="skills">
         <h2 class="heading">Skills</h2>
         <div class="row skillRow">
             <div class="col-md-3 skillTitle">
