--- a/index.html
+++ b/index.html
@@ -76,44 +76,35 @@
                 <div class="col-md-8">
                     <p>
                         Pursuing Masters' in Computer Science at North Carolina State University.
-
                     </p> 
                     <p>
-
                         I have varied interests ranging from Networking Technologies to Software Development, but I'm especially enthusiastic about Artificial Intelligence/Machine Learning development and applications. I believe in building technology that empowers mankind leading to a smarter and better future.
-
                     </p>
                     <p>
-
                         I'm a self motivated software engineer with an inquisitive mind. I like to lead with example and seek challenges that push me beyond my limits, helping me evolve as an Engineer as well as a human being.
-
                     </p>
                     <p>
-
                         Apart from Technology, my passion dwells in Photography, Writing and Traveling. I love to interact with people from various cultures, of different countries and sharing experiences as I believe there's something to learn from every experience.
-                    
                     </p>
 
                     <p>
-
                         Looking for challenging and rewarding roles in the computer software industry.
-                    
                     </p>
 
                     <div class="row">
                         <div class="col-sm-5 social">
                             <ul>
                                 <li>
-                                    <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                    <a href="https://github.com/Aayush1710" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                    <a href="https://www.facebook.com/a.patial" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                    <a href="https://twitter.com/sPatial_A" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                 <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
