--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="DP" class="DP"></div>
 
             <h1>Aayush Patial</h1>
-            <h2><span style = "color: white"> < </span>Code<span style = "color: white"> /> </span> and <span style = "color: white"> < </span>Chill <span style = "color: white"> /> </span></h2>
+            <h2><span style = "color: white"> < </span>Code<span style = "color: white"> > </span> and <span style = "color: white"> < </span>Chill <span style = "color: white"> /> </span></h2>
 
 
             <a href="#" class="btn-rounded-white">Download Resume</a>
