--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <i class="fa fa-bars" aria-hidden="true"></i>
     </div>
     <!-- End #mobile-menu-toggle -->
-    <header class = "sticky">
+    <header class = "sticky mainFont">
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
@@ -41,7 +41,7 @@
     <!-- End header -->
 
     <div id="lead">
-        <div id="lead-content">
+        <div id="lead-content" class ="mainFont">
 
             <div id="DP" class="DP"></div>
 
