--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2><span style = "color: white"> < </span>Code<span style = "color: white"> > </span> and <span style = "color: white"> < </span>Chill <span style = "color: white"> /> </span></h2>
 
 
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="res/APCV.pdf" class="btn-rounded-white">Download Resume</a>
        
 
 
