--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     <a href="https://github.com/Aayush1710" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                    <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                                    <a href="https://www.linkedin.com/in/apatial" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
                                     <a href="https://www.facebook.com/a.patial" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
@@ -107,7 +107,7 @@
                                     <a href="https://twitter.com/sPatial_A" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                                 </li>
                                 <li>
-                                <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                <a href="https://www.instagram.com/a_patial" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -225,9 +225,10 @@
         <div id="experience-timeline">
             <div data-date="March 2018 – April 2018">
                 <h3>Multi-Label Classification of Satellite Images using CNN</h3>
-                <h4>Python, CNN, Keras  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
+                <h4>Python, CNN, Keras  <a href="https://github.com/Aayush1710/Conv-Nets-for-Multi-label-classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
-                    • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc
+                    • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc.
+                    <br>
                     • Model takes an input image, computes a score for each of the 17 features, and then uses a cutoff threshold to decide which labels to keep.
                 </p>
             </div>
@@ -237,13 +238,14 @@
                 <h4>Java, SQL, MariaDB, JDBC   <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Coded the Wolf Inns Hotel DBMS application with the user ability to book different category rooms in multiple hotels, check nightly rates of each room along with allowed guests and complimentary services.
+                    <br>
                     • DB admins can access the hotel employee information, and customer details as well as make modifications                
                 </p>
             </div>
 
             <div data-date="March 2018 – April 2018">
                 <h3>OCR based Smart Shopping List  </h3>
-                <h4>Java, Node.js, MongoDB, Google Cloud Vision API  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Java, Node.js, MongoDB, Google Cloud Vision API  <a href="https://github.com/Aayush1710/Smart-Shopping-List-App" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the application with just a touch.
                 </p>
@@ -251,9 +253,10 @@
 
             <div data-date="February 2018 – March 2018">
                 <h3>Multi-Class Geospatial Object Detection </h3>
-                <h4>Python, Scikit, OpenCV, SVM   <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Python, Scikit, OpenCV, SVM   <a href="https://github.com/kira0992/Geospatial-Object-Detection-and-Image-Classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Designing a framework to detect specific objects from a geographical image by creating HOG of individual object images which are to be detected
+                    <br>
                     • Using linear SVM for classifying and detection of objects in the image within certain range of orientation
 
                 </p>
@@ -261,10 +264,12 @@
 
             <div data-date="November 2017 – December 2017">
                 <h3>NSF supported EXPERTIZA  </h3>
-                <h4>Ruby on Rails, MySQL,HTML, RSpec  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>Ruby on Rails, MySQL,HTML, RSpec  <a href="https://github.com/Aayush1710/expertiza" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
-                    • Expertiza is a classroom tool build on Ruby on Rails for group projects and peer review. We refactored assignment model of 'Expertiza' using Ruby On Rails and DRY principles for better architecture. 
+                    • Expertiza is a classroom tool build on Ruby on Rails for group projects and peer review. We refactored assignment model of 'Expertiza' using Ruby On Rails and DRY principles for better architecture.
+                    <br> 
                     • Worked on UI issues and improvement of display of review page for students work.
+                    <br>
                     • Added Expert review status and addition of feature of multiple expert review. 
                 </p>
             </div>
@@ -273,7 +278,8 @@
                 <h3>Car Rental Web Application  </h3>
                 <h4>Ruby on Rails,HTML,CSS, Heroku, PGSQL  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
-                    • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations. 
+                    • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations.
+                    <br> 
                     • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
                 </p>
             </div>
@@ -281,19 +287,22 @@
 
              <div data-date="January 2017 – May 2017">
                 <h3>FIS based Autonomous Navigation System </h3>
-                <h4>MATLAB  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>MATLAB  <a href="https://github.com/Aayush1710/FIS-based-Autonomous-Navigation" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
                     • Developed a Fuzzy Inference System(FIS) based algorithm for simulating the Autonomous Navigation System on MATLAB giving an error of about 1-2% from the ideal path.
+                    <br>
                     • Analysed the developed system against ANFIS and Neural-Networks to prove FIS as the better technique.
+                    <br>
                     • Research Paper published on IEEE explore digital library - DOI: 10.1109/ICCCNT.2017.8204164
                 </p>
             </div>
 
             <div data-date="October 2016 – November 2016">
                 <h3>Speech Emotion Detection </h3>
-                <h4>MATLAB  <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>MATLAB  <a href="https://github.com/Aayush1710/Speech-Emotion-Detection-using-Multiple-Neural-Networks" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
-                   • Developed an audio input classifier using multiple single hidden layer neural-networks in 5 user defined classes. 
+                   • Developed an audio input classifier using multiple single hidden layer neural-networks in 5 user defined classes.
+                   <br> 
                    • Analyzed extracted audio features using Principal Component Analysis(PCA) and used Neural-Network learns emotional information from low-level features giving 72% accuracy when tested.
 
                 </p>
