--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
  <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
-        <div class="education-block">
+        <div class="education-block" style="background: #fff;">
             <h3>North Carolina State University</h3>
             <span class="education-date">August 2017 - Present</span>
             <h4>Master of Computer Science, CGPA = 3.44</h4>
@@ -137,7 +137,7 @@
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
+        <div class="education-block" style="background: #fff;">
             <h3>University of Mumbai</h3>
             <span class="education-date">Jul 2013 - May 2017</span>
             <h4>Bachelor of Science in Electronics Engineering, CGPA = 3.63</h4>
