--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
 
             <div data-date="September 2017 – October 2017">
                 <h3>Car Rental Web Application  </h3>
-                <h4>Ruby on Rails,HTML,CSS, Heroku, PGSQL  <a href="https://github.ncsu.edu/apatial/carrental" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>  <a href="https://fathomless-plains-68604.herokuapp.com/d/users/sign_in">View Project</a></h4>
+                <h4>Ruby on Rails,HTML,CSS, Heroku, PGSQL  <a href="https://github.ncsu.edu/apatial/carrental" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
+                <a href="https://fathomless-plains-68604.herokuapp.com/d/users/sign_in">Use Application</a>
                 <p>
                     • Developed a Car-Rental App with Ruby on Rails for customers to reserve a car, modify reservations, edit check in check out of car, and manage reservations.
                     <br> 
