--- a/index.html
+++ b/index.html
@@ -282,7 +282,9 @@
                     <br> 
                     • Made use of PostgreSQL for the server and database management and hosted the application in Heroku cloud.
                 </p>
-                <a href="https://fathomless-plains-68604.herokuapp.com/d/users/sign_in">Use Application</a>
+                <br>
+                <a href="https://fathomless-plains-68604.herokuapp.com/d/users/sign_in">Try this Application</a>
+                <br>
             </div>
 
 
