--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         Pursuing Masters' in Computer Science at North Carolina State University.
                     </p> 
                     <p>
-                        I have varied interests ranging from Networking Technologies to Software Development, but I'm especially enthusiastic about Artificial Intelligence/Machine Learning development and applications. I believe in building technology that empowers mankind leading to a smarter and better future.
+                        I have varied interests ranging from Networking Technologies to Software Development, but I'm especially enthusiastic about Artificial Intelligence/Machine Learning development and building Data Analytic applications. I believe in building technology that empowers mankind leading to a smarter and better future.
                     </p>
                     <p>
                         I'm a self motivated software engineer with an inquisitive mind. I like to lead with example and seek challenges that push me beyond my limits, helping me evolve as an Engineer as well as a human being.
@@ -88,7 +88,7 @@
                     </p>
 
                     <p>
-                        Looking for challenging and rewarding roles in the computer software industry.
+                        You can connect with me through my social media accounts shown below..
                     </p>
 
                     <div class="row">
@@ -125,7 +125,7 @@
         <div class="education-block" style="background: #fff;">
             <h3>North Carolina State University</h3>
             <span class="education-date">August 2017 - Present</span>
-            <h4>Master of Computer Science, CGPA = 3.44</h4>
+            <h4>Master of Computer Science, CGPA = 3.39</h4>
             <ul>
                 <li>
                     Completed two semesters in the computer science department at NCSU. 
@@ -177,9 +177,9 @@
             </div>
             <div class="col-md-9 skillTiles">
                 <ul>
+                    <li>HTML5/CSS3</li>
                     <li>Node.js</li>
                     <li>JavaScript</li>
-                    <li>HTML5/CSS3</li>
                     <li>Ruby on Rails</li>
                 </ul>
             </div>
@@ -227,9 +227,12 @@
                 <h3>Multi-Label Classification of Satellite Images using CNN</h3>
                 <h4>Python, CNN, Keras  <a href="https://github.com/Aayush1710/Conv-Nets-for-Multi-label-classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
-                    • Designed and Implemented 4 CNN model namely Resnet-50, Baseline, VGG-16, and Inception to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc.
+
+                    • Designed 4 CNN models namely Resnet-50, Baseline, VGG-16, and Inception, using transfer learing, to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc.
+                    <br> 
+                    • Added additional layers and adjusted hyperparameters to increase the efficiency of the baseline model. 
                     <br>
-                    • Model takes an input image, computes a score for each of the 17 features, and then uses a cutoff threshold to decide which labels to keep.
+                    • Model then takes an input image, computes a score for each of the 17 features, and then uses a cutoff threshold to decide which labels to be used for classification.
                 </p>
             </div>
 
@@ -239,15 +242,17 @@
                 <p>
                     • Coded the Wolf Inns Hotel DBMS application with the user ability to book different category rooms in multiple hotels, check nightly rates of each room along with allowed guests and complimentary services.
                     <br>
-                    • DB admins can access the hotel employee information, and customer details as well as make modifications                
+                    • DB admins can access the hotel employee information, and customer details as well as make modifications.                
                 </p>
             </div>
 
             <div data-date="March 2018 – April 2018">
-                <h3>OCR based Smart Shopping List  </h3>
+                <h3>OCR based Smart Shopping Android Application  </h3>
                 <h4>Java, Node.js, MongoDB, Google Cloud Vision API  <a href="https://github.com/Aayush1710/Smart-Shopping-List-App" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
-                    • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the application with just a touch.
+                    • Developed android application with features of Bill Parsing and Push Notification using Google Cloud Vision API. User can scan bill and get data parsed into the database.
+                    <br>
+                    • Uses Node.js for backend where a neural network is designed to predict the expected date for user to run out of gorcery items
                 </p>
             </div>
 
@@ -255,9 +260,11 @@
                 <h3>Multi-Class Geospatial Object Detection </h3>
                 <h4>Python, Scikit, OpenCV, SVM   <a href="https://github.com/kira0992/Geospatial-Object-Detection-and-Image-Classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
-                    • Designing a framework to detect specific objects from a geographical image by creating HOG of individual object images which are to be detected
+                    • Designed a model to extract features from a geographical image by creating HOG of individual object images and use them for detection.
                     <br>
-                    • Using linear SVM for classifying and detection of objects in the image within certain range of orientation
+                    • Used SVM for classifying and detection of objects in the image within certain range of orientation.
+                    <br>
+                    • Detection is done using a sliding window in the image and rescaling the image to detect features from that window to detect what object is present in that image. 
 
                 </p>
             </div>
@@ -290,13 +297,13 @@
 
              <div data-date="January 2017 – May 2017">
                 <h3>FIS based Autonomous Navigation System </h3>
-                <h4>MATLAB  <a href="https://github.com/Aayush1710/FIS-based-Autonomous-Navigation" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
+                <h4>MATLAB  <a href="https://github.com/Aayush1710/FIS-based-Autonomous-Navigation" target="_blank"><i class="fa fa-github" aria-hidden="true"> </i></a>   <a href="https://ieeexplore.ieee.org/document/8204164" target="_blank"><i class="fa fa-newspaper-o" aria-hidden="true"> </i></a></h4>
                 <p>
                     • Developed a Fuzzy Inference System(FIS) based algorithm for simulating the Autonomous Navigation System on MATLAB giving an error of about 1-2% from the ideal path.
                     <br>
                     • Analysed the developed system against ANFIS and Neural-Networks to prove FIS as the better technique.
                     <br>
-                    • Research Paper published on IEEE explore digital library - DOI: 10.1109/ICCCNT.2017.8204164
+                    • Published on IEEE explore digital library - DOI: 10.1109/ICCCNT.2017.8204164
                 </p>
             </div>
 
@@ -306,7 +313,7 @@
                 <p>
                    • Developed an audio input classifier using multiple single hidden layer neural-networks in 5 user defined classes.
                    <br> 
-                   • Analyzed extracted audio features using Principal Component Analysis(PCA) and used Neural-Network learns emotional information from low-level features giving 72% accuracy when tested.
+                   • Analyzed extracted audio features using Principal Component Analysis(PCA) and used Neural-Network to learn emotional information from low-level features giving 72% accuracy when tested.
 
                 </p>
             </div>
