footer social link

--- a/index.html
+++ b/index.html
@@ -350,6 +350,25 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
+                <div class="col-sm-5 social">
+                            <ul>
+                                <li>
+                                    <a href="https://github.com/Aayush1710" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/apatial" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/a.patial" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/sPatial_A" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                </li>
+                                <li>
+                                <a href="https://www.instagram.com/a_patial" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                </li>
+                            </ul>
+                        </div>
             </div>
         </div>
     </footer>
