--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
     <!-- End #experience -->
 
 
-    <div id="contact">
-        <h2>Get in Touch</h2>
+    <div id="contact" class ="mainFont">
+        <h2>GET IN TOUCH WITH ME</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/apatial@ncsu.edu">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
